// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkBreadcrumb should render correctly 1`] = `
<DocumentFragment>
  <nav
    aria-label="My breadcrumbs"
  >
    <ol
      class="bpk-breadcrumb"
    >
      <div>
        Anything can go in here
      </div>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`BpkBreadcrumb should render correctly with a custom class name 1`] = `
<DocumentFragment>
  <nav
    aria-label="My breadcrumbs"
    class="my-custom-class"
  >
    <ol
      class="bpk-breadcrumb"
    >
      <div>
        Anything can go in here
      </div>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`BpkBreadcrumb should render correctly with arbitrary props 1`] = `
<DocumentFragment>
  <nav
    aria-label="My breadcrumbs"
    testid="arbitrary value"
  >
    <ol
      class="bpk-breadcrumb"
    >
      <div>
        Anything can go in here
      </div>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`BpkBreadcrumb should render correctly with schema meta data 1`] = `
<DocumentFragment>
  <script
    type="application/ld+json"
  >
    {"@context":"http://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"item":{"@id":"http://www.skyscanner.net","name":"home"}},{"@type":"ListItem","position":2,"item":{"@id":"http://www.skyscanner.net/hotels","name":"hotels"}}]}
  </script>
  <nav
    aria-label="My breadcrumbs"
  >
    <ol
      class="bpk-breadcrumb"
    >
      <div>
        Anything can go in here
      </div>
    </ol>
  </nav>
</DocumentFragment>
`;
